--- a/NimbusGateway/nimbus_aws_gw_example.conf
+++ b/NimbusGateway/nimbus_aws_gw_example.conf
@@ -1,4 +1,4 @@
-# rename this file to nimbus_aws_gw.conf
+# place this file under /etc/nimbus/nimbus_aws_gw.conf
 
 [AWS]
 aws_access_key_id = 
@@ -8,7 +8,7 @@ aws_secret_access_key =
 host = localhost
 username = 
 password = 
-database = 
+database = s3bacula
 
 [CERT]
 sslcert = /pathway/to/mycert/mycert.pem
