--- a/django/backup_corporativo/logging.conf
+++ b/django/backup_corporativo/logging.conf
@@ -23,21 +23,21 @@ args=(sys.stdout,)
 
 
 [handler_SyslogHandler]
-class=logging.handlers.SysLogHandler
+class=handlers.SysLogHandler
 level=DEBUG
 formatter=SimpleFormatter
 args=("/dev/log",)
 
 
 [handler_RotateHandler]
-class=logging.handlers.TimedRotatingFileHandler
+class=handlers.TimedRotatingFileHandler
 level=DEBUG
 formatter=SimpleFormatter
 args=("/var/log/nimbus/messages",'W0',53)
 
 
 [handler_MailHandler]
-class=logging.handlers.SMTPHandler
+class=handlers.SMTPHandler
 level=CRITICAL
 formatter=SimpleFormatter
 args=("mail.linconet.com.br",'rodrigo@linconet.com.br',['rodrigo@linconet.com.br'],"Nimbus Log")
