Implementação da funcionalidade de mudança de timezone no webservice nimbusmanager

--- a/webservices/manager/nimbus_manager.conf
+++ b/webservices/manager/nimbus_manager.conf
@@ -5,6 +5,9 @@ address = 127.0.0.1
 port = 8888
 
 [PATH]
+zoneinfo = /usr/share/zoneinfo
+localtime = /etc/localtime
+localtimebkp = /etc/localtime-old
 dns = /etc/resolv.conf
 interfaces = /etc/network/interfaces
 iftab = /etc/iftab
