--- a/libs/keymanager/conf/ssl.conf
+++ b/libs/keymanager/conf/ssl.conf
@@ -1,7 +1,10 @@
 [req]
 prompt = no
 distinguished_name = conf_name
+x509_extensions      = usr_cert
 
+[ usr_cert ]
+subjectKeyIdentifier   = hash
 
 [ conf_name ]
 C                      = BR
