--- a/nimbus/confs/logging.conf
+++ b/nimbus/confs/logging.conf
@@ -3,7 +3,7 @@ keys=root
 
 
 [handlers]
-keys=RootConsoleHandler,SyslogHandler,RotateHandler,MailHandler
+keys=RootConsoleHandler,SyslogHandler,RotateHandler
 
 
 [formatters]
@@ -12,7 +12,7 @@ keys=SimpleFormatter
 
 [logger_root]
 level=DEBUG
-handlers=RootConsoleHandler,SyslogHandler,RotateHandler,MailHandler
+handlers=RootConsoleHandler,SyslogHandler,RotateHandler
 
 
 [handler_RootConsoleHandler]
@@ -35,12 +35,6 @@ level=DEBUG
 formatter=SimpleFormatter
 args=("/var/log/nimbus/messages",'W0',53)
 
-
-[handler_MailHandler]
-class=handlers.SMTPHandler
-level=CRITICAL
-formatter=SimpleFormatter
-args=("mail.linconet.com.br",'rodrigo@linconet.com.br',['rodrigo@linconet.com.br'],"Nimbus Log")
 
 
 [formatter_SimpleFormatter]
