--- a/deb/DEBIAN/control
+++ b/deb/DEBIAN/control
@@ -3,5 +3,5 @@ Priority: optional
 Version: 1.0.214
 Architecture: i386
 Maintainer: Veezor
-Depends: nimbus-dependencies (>= 0.9), postgresql-8.4, nginx, python-pkg-resources, python-pycurl, python-setuptools
+Depends: nimbus-dependencies (>= 0.9), postgresql-8.4, nginx, python-pkg-resources, python-setuptools
 Description: Nimbus Backup System
