--- a/deb/DEBIAN/control
+++ b/deb/DEBIAN/control
@@ -1,6 +1,6 @@
 Package: nimbus
 Priority: optional
-Version: 1.0.214
+Version: 1.3.0-15e1a36145fc5e66408c104db8dcca87a61ad695
 Architecture: i386
 Maintainer: Veezor
 Depends: nimbus-dependencies (>= 0.9), postgresql-8.4, nginx, python-pkg-resources, python-setuptools
